@@ -7,6 +7,7 @@ import org.solcation.solcation_be.common.ErrorCode;
 import org.solcation.solcation_be.domain.auth.dto.LoginReqDTO;
 import org.solcation.solcation_be.domain.auth.dto.LoginResDTO;
 import org.solcation.solcation_be.domain.auth.dto.SignupReqDTO;
+import org.solcation.solcation_be.domain.auth.dto.UserAuthDTO;
 import org.solcation.solcation_be.entity.User;
 import org.solcation.solcation_be.repository.UserRepository;
 import org.solcation.solcation_be.security.JwtTokenProvider;
@@ -14,6 +15,8 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -37,7 +40,7 @@ public class AuthService {
     @Transactional
     public LoginResDTO login(LoginReqDTO req) {
         //아이디 조회
-        User user = userRepository.findByUserId(req.getUserId()).orElseThrow(() -> new CustomException(ErrorCode.USER_NOT_FOUND));
+        UserAuthDTO user = userRepository.findByUserIdToDTO(req.getUserId()).orElseThrow(() -> new CustomException(ErrorCode.USER_NOT_FOUND));
 
         //비밀번호 일치 여부 확인
         if(!passwordEncoder.matches(req.getUserPw(), user.getUserPw())) {
@@ -46,19 +49,17 @@ public class AuthService {
 
         //jwt 발급
         String roleName = user.getRole() != null ? user.getRole().name() : "USER";
-        var roles = List.of("ROLE_" + roleName);
+        List<String> roles = Collections.singletonList("ROLE_" + roleName);
 
-        String newAccess = jwtTokenProvider.createAccessToken(
-                String.valueOf(user.getUserId()),
-                Map.of(
-                        "userPk", user.getUserPk(),
-                        "roles", roles,
-                        "userId", user.getUserId(),
-                        "userName", user.getUserName(),
-                        "email", user.getEmail(),
-                        "tel", user.getTel()
-                )
-        );
+        Map<String, Object> claims = new HashMap<>(6);
+        claims.put("userPk", user.getUserPk());
+        claims.put("roles", roles);
+        claims.put("userId", user.getUserId());
+        claims.put("userName", user.getUserName());
+        claims.put("email", user.getEmail());
+        claims.put("tel", user.getTel());
+
+        String newAccess = jwtTokenProvider.createAccessToken(user.getUserId(), claims);
 
         return LoginResDTO.builder()
                 .tokenType("Bearer")
